--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
-asgiref==3.7.2
+# Core
 Django==4.2.8
-django-rest-framework==0.1.0
-djangorestframework==3.14.0
-iniconfig==2.0.0
-packaging==23.2
-pluggy==1.3.0
-pytest==7.4.3
+django-configurations==2.5
 pytz==2023.3.post1
-sqlparse==0.4.4
+python-dotenv==1.0.0
+gunicorn==21.2.0
+
+# Database
+psycopg2-binary==2.9.9
+django-allauth==0.58.2
+
+# Rest apis
+djangorestframework==3.14.0
+django-rest-auth==0.9.5
+djangorestframework-jwt==1.11.0
+django-filter==23.5
+django-cors-headers==4.3.1
+
+# Test
+pytest==7.4.3
+
