add AWS env settings

--- a/.env_example
+++ b/.env_example
@@ -17,3 +17,8 @@ DB_USER=postgres
 PASSWORD=postgres
 HOST=db
 PORT=5432
+
+# AWS stettings
+DJANGO_AWS_ACCESS_KEY_ID=example
+DJANGO_AWS_SECRET_ACCESS_KEY=example
+DJANGO_AWS_STORAGE_BUCKET_NAME=example
