--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,7 @@
 # Django
 SECRET_KEY=django-insecure-8j$x66@!!o$u$v(vz^=2&2*fof@tq%3-*a&@xx^(+n88$2684
 DJANGO_PAGINATION_LIMIT=15
+DJANGO_CORS_ORIGIN_WHITELIST=
 DJANGO_DEBUG=True
 
 # Email settings
@@ -12,11 +13,17 @@ DJANGO_DEFAULT_FROM_EMAIL=example@email.com
 DJANGO_ACCOUNT_EMAIL_SUBJECT_PREFIX=Sportsy
 
 # Database
-NAME=postgres
-DB_USER=postgres
-PASSWORD=postgres
-HOST=db
-PORT=5432
+POSTGRES_NAME=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+
+# Celery
+CELERY_BROKER_URL=redis://redis:6379/1
+CELERY_RESULT_BACKEND=redis://redis:6379/1
+
+# Redis
 
 # AWS stettings
 DJANGO_AWS_ACCESS_KEY_ID=example
