--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ django-allauth==0.58.2
 
 # Rest apis
 djangorestframework==3.14.0
-django-rest-auth==0.9.5
 djangorestframework-simplejwt==5.3.1
+social-auth-app-django
 django-filter==23.5
 django-cors-headers==4.3.1
 
