--- a/.env_example
+++ b/.env_example
@@ -23,9 +23,11 @@ POSTGRES_PORT=5432
 CELERY_BROKER_URL=redis://redis:6379/1
 CELERY_RESULT_BACKEND=redis://redis:6379/1
 
-# Redis
+# Google OAuth2
+SOCIAL_AUTH_GOOGLE_OAUTH2_KEY=your_token
+SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET=your_token
 
-# AWS stettings
+# AWS settings
 DJANGO_AWS_ACCESS_KEY_ID=example
 DJANGO_AWS_SECRET_ACCESS_KEY=example
 DJANGO_AWS_STORAGE_BUCKET_NAME=example
