--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      - DJANGO_SETTINGS_MODULE=core.settings  # variables for test
+      - DJANGO_CONFIGURATION=Local
     volumes:
       - ./app:/app
     ports:
