--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Docker
-        uses: docker/setup-docker
+        uses: docker/docker/setup-buildx-action@v1
 
       - name: Login to Docker Hub (if needed)
         uses: docker/login-action@v2
