--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -12,11 +12,11 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Build and run services
-        working-directory: ./your_app_directory  # Replace with your app directory
+        working-directory: .
         run: docker-compose up -d --build
 
       - name: Run tests
-        working-directory: ./your_app_directory  # Replace with your app directory
+        working-directory: .
         run: docker-compose run --rm web python manage.py test
 
       - name: Stop services
