--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -9,12 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     
     env:
-        SOCIAL_AUTH_GOOGLE_OAUTH2_KEY: ${{ .env.SOCIAL_AUTH_GOOGLE_OAUTH2_KEY }}
-        SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET: ${{ .env.SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET }}
+        SOCIAL_AUTH_GOOGLE_OAUTH2_KEY: ${{ secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_KEY }}
+        SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET: ${{ secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET }}
 
-        DJANGO_AWS_ACCESS_KEY_ID: ${{ .env.DJANGO_AWS_ACCESS_KEY_ID }}
-        DJANGO_AWS_SECRET_ACCESS_KEY: ${{ .env.DJANGO_AWS_SECRET_ACCESS_KEY }}
-        DJANGO_AWS_STORAGE_BUCKET_NAME: ${{ .env.DJANGO_AWS_STORAGE_BUCKET_NAME }}
+        DJANGO_AWS_ACCESS_KEY_ID: ${{ secrets.DJANGO_AWS_ACCESS_KEY_ID }}
+        DJANGO_AWS_SECRET_ACCESS_KEY: ${{ secrets.DJANGO_AWS_SECRET_ACCESS_KEY }}
+        DJANGO_AWS_STORAGE_BUCKET_NAME: ${{ secrets.DJANGO_AWS_STORAGE_BUCKET_NAME }}
 
     steps:
       - uses: actions/checkout@v3
