--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,14 +16,14 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - DJANGO_SETTINGS_MODULE=core.settings  # variables for test
+      - DJANGO_SETTINGS_MODULE=core.settings  # variables for pytest
       - DJANGO_CONFIGURATION=Local
     volumes:
       - ./app:/app
     ports:
       - '8000:8000'
     env_file:
-      - .env_dev
+      - .env
     depends_on:
       - db
     command: python manage.py runserver 0.0.0.0:8000
