--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,7 +22,7 @@ jobs:
   
       - name: Set environment variables using a shell script
         run: |
-          echo "$SECRET_KEY=${{ steps.get_secrets.outputs.secret_key }}
+          echo "$SECRET_KEY=${{ steps.get_secrets.outputs.secret_key }}"
       - uses: actions/checkout@v3
 
       - name: Build and run services
