--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,8 +7,10 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    
 
     steps:
+      - uses: actions/checkout@v3
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -23,8 +25,8 @@ jobs:
   
       - name: Set environment variables using a shell script
         run: |
-          echo "My Database Password: ${{ steps.get_secrets.outputs.prod }}"
-      - uses: actions/checkout@v3
+          echo "${{ steps.get-aws-secret.outputs.secretString }}" > prod.env
+          source prod.env    
 
       - name: Build and run services
         working-directory: .
