--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,7 +10,6 @@ jobs:
     
 
     steps:
-      - uses: actions/checkout@v3
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -25,8 +24,8 @@ jobs:
   
       - name: Set environment variables using a shell script
         run: |
-          echo "${{ steps.get-aws-secret.outputs.secretString }}" > prod.env
-          source prod.env    
+          run: echo "Secret Value: ${{ steps.get-aws-secret.outputs.secretString }}"    
+      - uses: actions/checkout@v3
 
       - name: Build and run services
         working-directory: .
