--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,7 +24,7 @@ jobs:
   
       - name: Set environment variables using a shell script
         run: |
-          run: echo "Secret Value: $SECRET_KEY "    
+          run: echo "Secret Value: $PROD "    
       - uses: actions/checkout@v3
 
       - name: Build and run services
