--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,26 +7,39 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    
+
+    env:
+      SECRET_KEY: ${{ secrets.SECRET_KEY }} 
+      DJANGO_PAGINATION_LIMIT: ${{ secrets.DJANGO_PAGINATION_LIMIT }} 
+      DJANGO_CORS_ORIGIN_WHITELIST: ${{ secrets.DJANGO_CORS_ORIGIN_WHITELIST }} 
+      DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
+      
+      DJANGO_EMAIL_HOST: ${{ secrets.MY_DJANGO_EMAIL_HOSTAPI_KEY }} 
+      DJANGO_EMAIL_PORT: ${{ secrets.DJANGO_EMAIL_PORT }} 
+      DJANGO_EMAIL_HOST_USER: ${{ secrets.DJANGO_EMAIL_HOST_USER }} 
+      DJANGO_EMAIL_HOST_PASSWORD: ${{ secrets.DJANGO_EMAIL_HOST_PASSWORD }} 
+      DJANGO_DEFAULT_FROM_EMAIL: ${{ secrets.DJANGO_DEFAULT_FROM_EMAIL }}
+      DJANGO_ACCOUNT_EMAIL_SUBJECT_PREFIX: ${{ secrets.DJANGO_ACCOUNT_EMAIL_SUBJECT_PREFIX }}
+
+      POSTGRES_NAME: ${{ secrets.POSTGRES_NAME }}
+      POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+      POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
+      POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
+      
+      CELERY_BROKER_URL: ${{ secrets.CELERY_BROKER_URL }}
+      CELERY_RESULT_BACKEND: ${{ secrets.CELERY_RESULT_BACKEND }}
+      
+      SOCIAL_AUTH_GOOGLE_OAUTH2_KEY: ${{ secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_KEY }}
+      SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET: ${{ secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET }}
+      
+      DJANGO_AWS_ACCESS_KEY_ID: ${{ secrets.DJANGO_AWS_ACCESS_KEY_ID }}
+      DJANGO_AWS_SECRET_ACCESS_KEY: ${{ secrets.DJANGO_AWS_SECRET_ACCESS_KEY }}
+      DJANGO_AWS_STORAGE_BUCKET_NAME: ${{ secrets.DJANGO_AWS_STORAGE_BUCKET_NAME }}
+  
+ 
 
     steps:
-      - uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - uses: aws-actions/aws-secretsmanager-get-secrets@v1
-        id: get-aws-secret 
-        with:
-          secret-ids: |
-            SECRET_KEY,  prod
-  
-      - name: Set environment variables using a shell script
-        run: |
-          run: echo "Secret Value: $PROD "    
-      - uses: actions/checkout@v3
-
       - name: Build and run services
         working-directory: .
         run: docker-compose up -d --build
