--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,10 +7,19 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
- 
-    
+
+    env:
+        SECRET_KEY: ${{ secrets.SECRET_KEY }} 
+        DJANGO_PAGINATION_LIMIT: ${{ secrets.DJANGO_PAGINATION_LIMIT }} 
+        DJANGO_CORS_ORIGIN_WHITELIST: ${{ secrets.DJANGO_CORS_ORIGIN_WHITELIST }} 
+        DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
     steps:
       - uses: actions/checkout@v3
+
+      - name: Check secrets
+        run: | 
+          echo $SECRET_KEY
+          echo $DJANGO_DEBUG
       - name: Build and run services
         working-directory: .
 
@@ -18,11 +27,8 @@ jobs:
 
       - name: Run tests
         working-directory: .
-        env:
-            SECRET_KEY: ${{ secrets.SECRET_KEY }} 
-            DJANGO_PAGINATION_LIMIT: ${{ secrets.DJANGO_PAGINATION_LIMIT }} 
-            DJANGO_CORS_ORIGIN_WHITELIST: ${{ secrets.DJANGO_CORS_ORIGIN_WHITELIST }} 
-            DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
+
+        
         run: docker-compose run --rm web python manage.py test
 
       - name: Stop services
