--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,7 +30,7 @@ jobs:
 
         run: |
           echo $SECRET_KEY
-          docker-compose run --rm web python manage.py test
+          docker-compose run --rm web pytest
 
       - name: Stop services
         run: docker-compose down
