--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           echo $SECRET_KEY
           docker-compose run --rm |
-          -e SECRET_KEY=${{ secrets.SECRET_KEY }} e- POSTGRES_HOST=${{ secrets.POSTGRES_HOST }} web pytest
+          -e SECRET_KEY=${{ secrets.SECRET_KEY }} -e POSTGRES_HOST=${{ secrets.POSTGRES_HOST }} web pytest
 
       - name: Stop services
         run: docker-compose down
