--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,9 +13,7 @@ jobs:
       - name: Generate .env file
         run: |
           touch app/.env
-          while read var_name; do
-            echo "$var_name=${{ secrets.$var_name }}" >> app/.env
-          done < ./vars.txt        
+          ./create_env_secrets.sh
           
       - name: Build and run services
         working-directory: .
