--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,8 +1,6 @@
 name: CI Pipeline
 
-on:
-  push:
-    branches: [dev , workflow_call]
+on: [pull_request, workflow_call]
 
 jobs:
   build-and-test:
