--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,12 +14,8 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
-
-      - uses: actions/checkout@v3
-        with:
-          repository: RomanShyshcenko/Sportsy
       - name: Test with Django
-        uses: ./.github/workflows/django.yml
+        uses: RomanShyshcenko/Sportsy/.github/workflows/django.yml
 
   deploy:
     name: Deploy
