--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,19 +7,29 @@ on:
       types:
         - completed
 
-concurrency:
-  group: main
-  cancel-in-progress: true
-
-
 jobs:
   deploy:
     name: Deploy
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Configure SSH
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+          SSH_USER: ${{ secrets.SSH_USER }}
+        run: |
+          mkdir -p ~/.ssh/
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/github
+          chmod 600 ~/.ssh/github
+          cat >> ~/.ssh/config <<END
+          Host target
+            HostName $SSH_HOST
+            User $SSH_USER
+            IdentityFile ~/.ssh/github
+            LogLevel ERROR
+            StrictHostKeyChecking no
+          END
+
       - name: Run deploy
         run: |
-            ls
-            cd Sportsy/
-            sudo docker-compose up --build
+          ssh target "cd Sportsy/ && sudo docker-compose down && sudo docker-compose up --build"
