--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,4 +32,4 @@ jobs:
 
       - name: Run deploy
         run: |
-          ssh target "cd Sportsy/ && sudo docker-compose down && sudo docker-compose up --build"
+          ssh target "cd Sportsy/ && git pull && sudo docker-compose down && sudo docker-compose up --build"
