--- a/nginx/Local/default.conf
+++ b/nginx/Local/default.conf
@@ -4,6 +4,9 @@ upstream django {
 
 server {
     listen 80;
+    server_name www.django-test.lol;
+
+
     location / {
         proxy_pass http://django;
     }
