--- a/app/.env_example
+++ b/app/.env_example
@@ -3,6 +3,7 @@ SECRET_KEY=django-insecure-8j$x66@!!o$u$v(vz^=2&2*fof@tq%2-*a&@xx^(+n88$2684
 DJANGO_PAGINATION_LIMIT=15
 DJANGO_CORS_ORIGIN_WHITELIST=
 DJANGO_DEBUG=True
+DJANGO_CONFIGURATION=Local
 
 # Email settings
 DJANGO_EMAIL_HOST=localhost
