--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,5 +32,4 @@ jobs:
 
       - name: Run deploy
         run: |
-          ssh target "cd Sportsy/ && git pull && sudo docker-compose down && sudo docker-compose up -f 
-          docker-compose-prod.yml --build"
+          ssh target "cd Sportsy/ && git pull && sudo docker-compose down && sudo docker-compose -f docker-compose-prod.yml up --build"
