--- a/nginx/Prod/default.conf
+++ b/nginx/Prod/default.conf
@@ -23,7 +23,7 @@ server {
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-    ssl_certificate /etc/letsencrypt/live/www.django-test.lol/fullchain.pem
+    ssl_certificate /etc/letsencrypt/live/www.django-test.lol/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/www.django-test.lol/privkey.pem;
     location / {
         proxy_pass http://django; # pass these requests to internal upstream
