--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -16,6 +16,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - DJANGO_SETTINGS_MODULE=core.settings  # variables for pytest
+      - DJANGO_CONFIGURATION=Prod
     volumes:
       - ./app:/app
     ports:
