--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
   build-and-test:
+    name: Test
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - name: Generate .env file
@@ -57,6 +57,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    needs: ['build-and-test']
     steps:
       - name: Configure SSH
         env:
